--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nuxt": "^3.5.2"
   },
   "dependencies": {
-    "@mdi/js": "^7.2.96"
+    "@mdi/js": "^7.2.96",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.2.0"
   }
 }
